refactor: адаптация под Java 11 и интеграцию с существующими проектами
- Понижена версия Java с 17 до 11
- Понижена версия Spring Boot с 3.2.0 до 2.7.18
- Удалена зависимость от Lombok
- Переписаны модели с ручными builders вместо Lombok @Builder
- Заменен @Slf4j на обычный Logger
- Заменен List.of() на Collections.singletonList()
- Добавлены руководства по интеграции:
  - QUICK_START.md - быстрый старт для интеграции
  - INTEGRATION_GUIDE.md - подробное руководство
  - COPY_THESE_FILES.md - какие файлы копировать
- Обновлены примеры для работы с jdbcTemplate

Co-authored-by: Maxwellio <Maxwellio@users.noreply.github.com>